--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "audako-core-components",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -35,5 +35,7 @@
     "@smui/tooltip": "^6.0.0-beta.16",
     "audako-core": "github:JacobDeuchert/audako-core",
     "tsyringe": "^4.7.0"
-  }
+  },
+  "author": "Jacob Deuchert",
+  "license": "MIT"
 }
