--- a/package.json
+++ b/package.json
@@ -9,18 +9,35 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "update-core": "npm i https://github.com/JacobDeuchert/audako-core"
+    "update-core": "npm i https://github.com/JacobDeuchert/audako-core",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "@babel/core": "^7.18.6",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-vite": "^0.2.0",
+    "@storybook/svelte": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@tsconfig/svelte": "^2.0.1",
+    "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
+    "dotenv": "^16.0.1",
+    "postcss": "^8.4.14",
     "rollup-plugin-typescript2": "^0.32.1",
-    "svelte": "^3.44.0",
+    "svelte": "^3.49.0",
     "svelte-check": "^2.2.7",
+    "svelte-loader": "^3.1.3",
     "svelte-preprocess": "^4.9.8",
+    "tailwindcss": "^3.1.6",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "vite": "^2.9.9"
+    "vite": "^3.0.0"
   },
   "dependencies": {
     "@ngneat/elf": "^2.1.0",
@@ -34,6 +51,8 @@
     "@smui/textfield": "^6.0.0-beta.16",
     "@smui/tooltip": "^6.0.0-beta.16",
     "audako-core": "github:JacobDeuchert/audako-core",
+    "reflect-metadata": "^0.1.13",
+    "svelte-material-ui": "^6.0.0-beta.16",
     "tsyringe": "^4.7.0"
   },
   "author": "Jacob Deuchert",
