--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "isolatedModules": true,
     "declaration": true
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
+  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte", "src/stories/Table.stories.mdx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
