--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "update-core": "npm i https://github.com/JacobDeuchert/audako-core",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prettier": "prettier --write ."
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -30,6 +31,8 @@
     "babel-loader": "^8.2.5",
     "dotenv": "^16.0.1",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-svelte": "^2.7.0",
     "rollup-plugin-typescript2": "^0.32.1",
     "svelte": "^3.49.0",
     "svelte-check": "^2.2.7",
