--- a/package.json
+++ b/package.json
@@ -46,19 +46,11 @@
   "dependencies": {
     "@ngneat/elf": "^2.1.0",
     "@ngneat/elf-persist-state": "^1.1.2",
-    "@smui/checkbox": "^6.0.0-beta.16",
-    "@smui/data-table": "^6.0.0-beta.16",
-    "@smui/form-field": "^6.0.0-beta.16",
-    "@smui/icon-button": "^6.0.0-beta.16",
-    "@smui/linear-progress": "^6.0.0-beta.16",
-    "@smui/select": "^6.0.0-beta.16",
-    "@smui/textfield": "^6.0.0-beta.16",
-    "@smui/tooltip": "^6.0.0-beta.16",
     "audako-core": "github:JacobDeuchert/audako-core",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.6",
-    "svelte-material-ui": "^6.0.0-beta.16",
-    "tsyringe": "^4.7.0"
+    "tsyringe": "^4.7.0",
+    "uuid": "^8.3.2"
   },
   "author": "Jacob Deuchert",
   "license": "MIT"
