--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "allowJs": true,
     "checkJs": true,
     "isolatedModules": true,
-    "declaration": true
+    "declaration": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte", "src/stories/Table.stories.mdx"],
   "references": [{ "path": "./tsconfig.node.json" }]
