--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/main.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && tsc --project tsconfig.build.json --emitDeclarationOnly --outDir dist",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "update-core": "npm i https://github.com/JacobDeuchert/audako-core",
@@ -33,7 +33,6 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "rollup-plugin-typescript2": "^0.32.1",
     "svelte": "^3.49.0",
     "svelte-check": "^2.2.7",
     "svelte-loader": "^3.1.3",
