--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "tailwindcss": "^3.1.6",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "vite": "^3.0.6"
+    "vite": "3.0.9"
   },
   "dependencies": {
     "@ngneat/elf": "^2.1.0",
