--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "checkJs": true,
     "isolatedModules": true,
     "declaration": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
