--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,6 +5,7 @@
     "useDefineForClassFields": true,
     "module": "esnext",
     "resolveJsonModule": true,
+    "experimentalDecorators": true,
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"]
