--- a/package.json
+++ b/package.json
@@ -10,48 +10,50 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "update-core": "npm i https://github.com/JacobDeuchert/audako-core",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "prettier": "prettier --write ."
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-svelte-csf": "^2.0.7",
-    "@storybook/builder-vite": "^0.2.2",
-    "@storybook/svelte": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/web-components": "^6.5.10",
-    "@sveltejs/vite-plugin-svelte": "^1.0.3",
-    "@tsconfig/svelte": "^2.0.1",
+    "@storybook/addon-essentials": "^7.0.0-rc.1",
+    "@storybook/addon-links": "^7.0.0-rc.1",
+    "@storybook/addon-mdx-gfm": "^7.0.0-rc.1",
+    "@storybook/addon-svelte-csf": "^3.0.0-next.3",
+    "@storybook/blocks": "^7.0.0-rc.1",
+    "@storybook/svelte-vite": "^7.0.0-rc.1",
+    "@storybook/web-components": "^7.0.0-rc.1",
+    "@storybook/web-components-vite": "^7.0.0-rc.1",
+    "@sveltejs/vite-plugin-svelte": "^2.0.3",
+    "@tsconfig/svelte": "^3.0.0",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "dotenv": "^16.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.49.0",
-    "svelte-check": "^2.2.7",
-    "svelte-loader": "^3.1.3",
-    "svelte-preprocess": "^4.9.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.0.0-rc.1",
+    "svelte": "^3.56.0",
+    "svelte-check": "^3.1.2",
+    "svelte-loader": "^3.1.7",
+    "svelte-preprocess": "^5.0.1",
     "tailwindcss": "^3.1.6",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "vite": "3.0.9"
+    "vite": "4.1.4"
   },
   "dependencies": {
     "@ngneat/elf": "^2.1.0",
     "@ngneat/elf-persist-state": "^1.1.2",
+    "@storybook/svelte": "^7.0.0-rc.1",
     "audako-core": "github:JacobDeuchert/audako-core",
     "lit": "^2.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.6",
     "tsyringe": "^4.7.0",
-    "twind": "^0.16.17",
+    "twind": "^0.16.19",
     "uuid": "^8.3.2"
   },
   "author": "Jacob Deuchert",
