--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "skipLibCheck": true,
     "experimentalDecorators": true
   },
+  "exclude": ["test/**"],
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
