--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build && tsc --project tsconfig.build.json --emitDeclarationOnly --outDir dist",
